--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -42,7 +42,7 @@
 
 <div class="flex w-full mb-4">
   <div class="w-full mx-3 md:mx-5 lg:mx-6 xl:mx-8">
-    <p-card header="My timeline" styleClass="mt-4">
+    <p-card header="My experience timeline" styleClass="mt-4">
       <p-timeline [value]="events" align="alternate" [align]="'alternate'">
         <ng-template #marker let-event>
           <span class="flex w-8 h-8 items-center justify-center text-white rounded-full z-10 shadow-sm"
