--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,1 +1,39 @@
-<p>projects works!</p>
+<div class="flex w-full">
+  <div class="w-full mx-3 md:mx-5 lg:mx-6 xl:mx-8">
+    <p-card header="Mis Proyectos" styleClass="mt-4">
+      <div class="grid">
+        <div class="col-12 md:col-6 lg:col-4" *ngFor="let project of projects">
+          <p-card [header]="project.name" [subheader]="project.subtitle" styleClass="h-full">
+            <ng-template pTemplate="header">
+              <img [src]="project.image" [alt]="project.name" class="w-full">
+            </ng-template>
+
+            <p class="line-height-3">{{project.description}}</p>
+
+            <p-divider>
+              <strong>Tecnologías</strong>
+            </p-divider>
+
+            <div class="flex flex-wrap gap-2 mt-3">
+              <p-chip *ngFor="let tech of project.technologies"
+                      [label]="tech.name"
+                      [style]="{'background-color': tech.color, 'color': 'white'}">
+              </p-chip>
+            </div>
+
+            <p-divider></p-divider>
+
+            <div class="flex justify-content-between mt-3">
+              <a [href]="project.github" target="_blank" class="p-button p-button-rounded p-button-text">
+                <i class="pi pi-github text-xl"></i>
+              </a>
+              <a [href]="project.demo" target="_blank" class="p-button p-button-rounded p-button-text">
+                <i class="pi pi-external-link text-xl"></i>
+              </a>
+            </div>
+          </p-card>
+        </div>
+      </div>
+    </p-card>
+  </div>
+</div>
