projects page done in its first checkout

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -45,7 +45,9 @@
 
     <div class="mt-6 pt-6 border-top-3 surface-border">
         <div class="flex flex-column md:flex-row justify-content-center align-items-center">
-            <span class="text-color-secondary">© 2025 Mateo Díaz Gómez. All rights reserved.</span>
+            <strong>
+                <span class="text-color-secondary text-xl">© 2025 Mateo Díaz Gómez. All rights reserved.</span>
+            </strong>
         </div>
     </div>
 </footer>
