GUI fixes implemented

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -33,7 +33,7 @@
                 <a href="https://github.com/carlomagnowhite" target="_blank" class="p-button p-button-rounded p-button-text">
                     <i class="pi pi-github text-xl"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/mateo-díaz-gómez-044966216" target="_blank" class="p-button p-button-rounded p-button-text">
+                <a href="https://www.linkedin.com/in/mateo-diaz-gomez" target="_blank" class="p-button p-button-rounded p-button-text">
                     <i class="pi pi-linkedin text-xl"></i>
                 </a>
                 <a href="https://wa.me/593983201121" target="_blank" class="p-button p-button-rounded p-button-text">
