--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,7 +14,7 @@
             <a href="https://gitlab.com/matt.diaz.gomez" target="_blank">
               <i class="devicon-gitlab-plain-wordmark colored" style="font-size: 2.5rem"></i>
             </a>
-            <a href="https://www.linkedin.com/in/mateo-díaz-gómez-044966216" target="_blank">
+            <a href="https://www.linkedin.com/in/mateo-diaz-gomez" target="_blank">
               <i class="devicon-linkedin-plain colored" style="font-size: 2.5rem"></i>
             </a>
             <a href="mailto:mateo19dg@gmail.com" target="_blank">
